--- a/springmvc/src/main/resources/static/index.html
+++ b/springmvc/src/main/resources/static/index.html
@@ -30,6 +30,7 @@
         </ul> </li>
     <li>HTTP 요청 파라미터
         <ul>
+            <li><a href="/log-test">로그 테스트</a></li>
             <li><a href="/request-param-v1?username=hello&age=20">요청 파라미터 v1</a></li>
             <li><a href="/request-param-v2?username=hello&age=20">요청 파라미터 v2</a></li>
             <li><a href="/request-param-v3?username=hello&age=20">요청 파라미터 v3</a></li>
